--- a/hello/static/css/now-ui-dashboard.css
+++ b/hello/static/css/now-ui-dashboard.css
@@ -2840,7 +2840,7 @@ Created using IcoMoon - icomoon.io
 .main-panel {
   position: relative;
   float: right;
-  width: calc(100% - 260px);
+  width: calc(100%);
   background-color: #E3E3E3;
   background-color: #ebecf1;
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1); }
