Updated README.md file

--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -25,6 +25,7 @@
   <h2 style="margin-top: 40px;">Empatica Mobile App Dashboard <span style="color: lightblue"><i class="fas fa-wave-square"></i></span></h2>
   <p style="color: grey">This is the assignment and testable working solution for the Full Stack Developer position at Empatica. It is also available in a live environment <a href="https://mobile-downloads-dashboard.herokuapp.com">here</a>
   </p>
+  <a href="/dashboard">Go to dashboard</a>
   <br>
   <hr>
   <br>
@@ -126,7 +127,7 @@
   <p style="color: black"><u>Testing</u>
   </p>
   <p style="color: grey">
-    The solution was tested on the major browsers, Chrome and Firefox
+    The solution was tested on the major browsers, Chrome and Firefox. I felt that writting unit tests was not needed since the backend in this demo only returns a JSON array and the front end just displays it. The data is even feeded to the backend. Django built-in code (models, views, etc) and Python built-in functions are already being tested for us. Here, we don't have any custom method to a Django model or custom views.
   </p>
 
 </body>
